--- a/app/categorias/templates/categorias/index.html
+++ b/app/categorias/templates/categorias/index.html
@@ -26,7 +26,7 @@
     <table class="table table-bordered table-hover align-middle shadow-sm">
         <thead class="table-dark text-center">
             <tr>
-                <th>ID</th>
+                <th>N°</th>
                 <th>Nombre</th>
                 <th>Tipo</th>
                 <th>Acciones</th>
@@ -42,12 +42,7 @@
                     <a href="#" class="btn btn-outline-info btn-sm me-1" data-bs-toggle="modal" data-bs-target="#viewModal{{ categoria.id }}">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="{{ url_for('categorias.actualizar', id=categoria.id) }}" class="btn btn-outline-warning btn-sm me-1">
-                        <i class="fas fa-edit"></i> 
-                    </a>
-                    <a href="#" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ categoria.id }}">
-                        <i class="fas fa-trash-alt"></i>
-                    </a>
+                    
 
                     <!-- Modal para ver detalles de la categoría -->
                     <div class="modal fade" id="viewModal{{ categoria.id }}" tabindex="-1" aria-labelledby="viewModalLabel{{ categoria.id }}" aria-hidden="true">
@@ -80,6 +75,7 @@
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                                     <form id="deleteForm{{ categoria.id }}" method="POST" action="{{ url_for('categorias.eliminar', id=categoria.id) }}">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                         <button type="submit" class="btn btn-danger">Eliminar</button>
                                     </form>
                                 </div>
