--- a/app/tamanios/templates/tamanios/index.html
+++ b/app/tamanios/templates/tamanios/index.html
@@ -80,6 +80,7 @@
                                     <div class="modal-footer  d-flex justify-content-center">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                                         <form id="deleteForm{{ tamanio.id }}" method="POST" action="{{ url_for('tamanios.eliminar', id=tamanio.id) }}">
+                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                             <button type="submit" class="btn btn-danger">Eliminar</button>
                                         </form>
                                     </div>
