agregando blueprints y plantillas para la gestión de locales y rubros

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,8 +88,20 @@
                         </a>
                     </li>
                     <li class="nav-item mb-2">
+                        <a class="nav-link text-white" href="/staff">
+                            <i class="fas fa-user-md me-2"></i>Staff
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item mb-2">
                         <a class="nav-link text-white" href="/sucursales">
                             <i class="bi bi-building-fill-add me-2"></i>Sucursales
+                        </a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link text-white" href="/schedules">
+                            <i class="fas fa-calendar-alt me-2"></i>Horarios
                         </a>
                     </li>
                     <li class="nav-item mb-2">
