feat: add calendar view and appointment details endpoint

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,6 +105,12 @@
                         </a>
                     </li>
                     <li class="nav-item mb-2">
+                        <a class="nav-link text-white" href="/calendar">
+                            <i class="fas fa-calendar-day me-2"></i>Calendario de Citas
+                        </a>
+                    </li>
+
+                    <li class="nav-item mb-2">
                         <a class="nav-link text-white" href="/promociones">
                             <i class="bi bi-tags-fill me-2"></i>Promociones
                         </a>
